@@ -1,5 +1,5 @@
 /*
-    Copyright 2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2013-2016, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -16,7 +16,7 @@ using namespace fostlib;
 string fostlib::cli::bar(const meter::reading &r, const std::size_t width) {
     if ( r.is_complete() ) {
         return string(width, '.');
-    } else if ( r.work().isnull() || r.work() == 0 ) {
+    } else if ( not r.work().value(0) ) {
         return string(width, '-');
     } else {
         const std::size_t dots(r.done() * width / r.work().value());
