@@ -38,93 +38,6 @@ namespace std {
 #include <fost/exception/null.hpp>
 
 
-template< typename T > inline
-fostlib::nullable< T >::nullable()
-: superclass_t( true, T() ) {
-}
-
-template< typename T > inline
-fostlib::nullable< T >::nullable( const nullable &t )
-: superclass_t( t.first, t.second ) {
-}
-
-template< typename T > inline
-fostlib::nullable< T >::nullable( const T &t )
-: superclass_t( false, t ) {
-}
-
-template< typename T > inline
-fostlib::nullable< T >::nullable( t_null )
-: superclass_t( true, T() ) {
-}
-
-template< typename T > inline
-fostlib::nullable< T >::~nullable() {
-}
-
-
-template< typename T > inline
-bool fostlib::nullable< T >::isnull() const {
-    return superclass_t::first;
-}
-template< typename T > inline
-void fostlib::nullable< T >::set_null() {
-    superclass_t::first = true;
-    superclass_t::second = T();
-}
-
-
-template< typename T > inline
-fostlib::nullable< T > &fostlib::nullable< T >::operator =( const T &t ) {
-    superclass_t::first = false;
-    superclass_t::second = t;
-    return *this;
-}
-template< typename T > inline
-fostlib::nullable< T > &fostlib::nullable< T >::operator =( t_null ) {
-    set_null();
-    return *this;
-}
-
-
-template< typename T > inline
-bool fostlib::nullable< T >::operator ==( const T &rhs ) const {
-    if ( isnull() )
-        return false;
-    else
-        return value() == rhs;
-}
-template< typename T > inline
-bool fostlib::nullable< T >::operator ==( const fostlib::nullable< T > &rhs ) const {
-    if ( isnull() && rhs.isnull() )
-        return true;
-    else if ( !isnull() && !rhs.isnull() && value() == rhs.value() )
-        return true;
-    return false;
-}
-
-
-template< typename T > inline
-const T &fostlib::nullable< T >::value() const {
-    if ( isnull() )
-        throw fostlib::exceptions::null();
-    return superclass_t::second;
-}
-template< typename T > inline
-T &fostlib::nullable< T >::value() {
-    if ( isnull() )
-        throw fostlib::exceptions::null();
-    return superclass_t::second;
-}
-template< typename T > inline
-const T &fostlib::nullable< T >::value( const T &v ) const {
-    if ( isnull() )
-        return v;
-    else
-        return superclass_t::second;
-}
-
-
 /*
 	Comparison operators
 */
